DNN-30211 UI Issue for Expand All/Collapse All

--- a/Extensions/Content/Dnn.PersonaBar.Extensions/WebApps/Pages.Web/src/components/dnn-persona-bar-page-treeview/src/styles.less
+++ b/Extensions/Content/Dnn.PersonaBar.Extensions/WebApps/Pages.Web/src/components/dnn-persona-bar-page-treeview/src/styles.less
@@ -61,7 +61,6 @@
     }
     .initial {
         color: @alto;
-        cursor: default;
     }
     .item-name {
         position: relative;
